Fixed scroll in Safari on iOS

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -6,8 +6,11 @@ body {
 
 .Hero {
   display: table;
-  height: 100vh;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 } 
 
 .Hero h1 {
